changed some codes

--- a/views/show.erb
+++ b/views/show.erb
@@ -13,7 +13,7 @@
 <div class = "show_btns">
 	<a href="/note/edit/<%= @note['id'] %>" class = "edit_btn">変更</a>
 
-	<form method="post" action="/note/delete/<%= @note['id'] %>">
+	<form method="post" action="/note/<%= @note['id'] %>">
 		<input type="hidden" name="_method" value="DELETE">
 		<input type="submit" value="削除" class = "delete_btn">
 	</form>
