--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,4 +1,4 @@
-<form action = "/note/edit2/<%= @note['id'] %>" method = "post">
+<form action = "/note/editing/<%= @note['id'] %>" method = "post">
   <input type = "text" name = "title" value = "<%= @note['title'] %>" class = "title_input">
   <br>
   <textarea name = "content">
